--- a/login.html
+++ b/login.html
@@ -68,7 +68,7 @@
 <body>
     <div class="login-container">
         <h2>Login SATU TI</h2>
-        <form>
+        <form action="informasi.html">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" placeholder="Masukkan username" required>
 
@@ -88,3 +88,4 @@
     </div>
 </body>
 </html>
+
