--- a/informasi.html
+++ b/informasi.html
@@ -190,7 +190,7 @@
             
             <div class="col">
                 <div class="card h-100 shadow-sm">
-                    <img src="image/PUI.jpg" class="card-img-top-custom" alt="Workshop PUI Rintisan">
+                    <img src="image/PUI.webp" class="card-img-top-custom" alt="Workshop PUI Rintisan">
                     <div class="card-body">
                         <h5 class="card-title text-success" id="judul-b1">Workshop Pembuatan Roadmap PUI Rintisan di Fasilkom-TI USU</h5>
                         <p class="card-text text-truncate-3">
@@ -410,3 +410,4 @@
 
 </body>
 </html>
+
