--- a/informasi.html
+++ b/informasi.html
@@ -11,7 +11,6 @@
     <title>Satu TI - Portal</title>
 
     <style>
-        /* Mengatur lebar sidebar dan memastikan tingginya penuh layar */
         .sidebar {
             width: 250px;
             height: 100vh;
@@ -25,7 +24,6 @@
             padding-top: 100px;
         }
 
-        /* Menyesuaikan styling untuk nav-link, termasuk yang ada di dalam dropdown */
         .sidebar .nav-link {
             padding: 10px 20px;
             color: #444; 
@@ -34,11 +32,10 @@
         .sidebar .nav-link:hover {
             background-color: #f0f0f0; 
         }
-        
-        /* Mengatasi background aktif pada nav-link utama di sidebar */
+
         .sidebar .nav-link.active {
-            background-color: #f0f0f0 !important; /* Agar background aktif tetap terlihat */
-            border-left: 3px solid #0d6efd !important; /* Border primary */
+            background-color: #f0f0f0 !important; 
+            border-left: 3px solid #0d6efd !important; 
         }
 
         .grid-image {
@@ -49,13 +46,11 @@
             margin-bottom: 15px;
         }
 
-        /* Styling untuk gambar di dalam card prestasi dan berita */
         .card-img-top-custom {
             height: 150px;
             object-fit: cover;
         }
         
-        /* CSS BARU: Memotong teks card setelah 3 baris */
         .text-truncate-3 {
             display: -webkit-box;
             -webkit-line-clamp: 3;
@@ -410,4 +405,5 @@
 
 </body>
 </html>
+
 
