--- a/login.html
+++ b/login.html
@@ -32,6 +32,10 @@
             border: 1px solid #ccc;
             border-radius: 5px;
         }
+        input[type="text"]:hover,
+        input[type="password"]:hover {
+            box-shadow: 0 0 8px rgba(33, 183, 13, 0.806);
+        }
         .checkbox-container {
             display: flex;
             align-items: center;
