--- a/profil_dosen.html
+++ b/profil_dosen.html
@@ -132,7 +132,7 @@
 <div class="card shadow-sm p-4 mb-4">
 <div class="row">
 <div class="col-md-4 text-center">
-<img src="imagedosen/pak ivan.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
+<img src="image/pak ivan.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
 <h5>Ivan Jaya S.Si., M.Kom.</h5>
 <p class="text-muted">FASILKOMTI - Teknologi Informasi</p>
 </div>
@@ -152,7 +152,7 @@
 <div class="card shadow-sm p-4 mb-4">
 <div class="row">
 <div class="col-md-4 text-center">
-<img src="imagedosen/ibu umaya.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
+<img src="image/ibu umaya.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
 <h5>Umaya Ramadhani Putri Nasution S.TI., M.Kom.</h5>
 <p class="text-muted">FASILKOMTI - Teknologi Informasi</p>
 </div>
@@ -172,7 +172,7 @@
 <div class="card shadow-sm p-4 mb-4">
 <div class="row">
 <div class="col-md-4 text-center">
-<img src="imagedosen/ibu ade.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
+<img src="image/ibu ade.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
 <h5>Ade Sarah Huzaifah S.Kom., M.Kom</h5>
 <p class="text-muted">FASILKOMTI - Teknologi Informasi</p>
 </div>
@@ -191,7 +191,7 @@
 <div class="card shadow-sm p-4 mb-4">
 <div class="row">
 <div class="col-md-4 text-center">
-<img src="imagedosen/pak niskarto.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
+<img src="image/pak niskarto.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
 <h5>Dr. Niskarto Zendrato S.Kom., M.Kom</h5>
 <p class="text-muted">FASILKOMTI - Teknologi Informasi</p>
 </div>
@@ -210,7 +210,7 @@
 <div class="card shadow-sm p-4 mb-4">
 <div class="row">
 <div class="col-md-4 text-center">
-<img src="imagedosen/ibu fanindia.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
+<img src="image/ibu fanindia.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
 <h5>Fanindia Purnamasari S.TI., M.IT</h5>
 <p class="text-muted">FASILKOMTI - Teknologi Informasi</p>
 </div>
@@ -229,7 +229,7 @@
 <div class="card shadow-sm p-4 mb-4">
 <div class="row">
 <div class="col-md-4 text-center">
-<img src="imagedosen/pak fadly.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
+<img src="image/pak fadly.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
 <h5>Mohammad Fadly Syah Putra, B.Sc., M.Sc.IT</h5>
 <p class="text-muted">FASILKOMTI - Teknologi Informasi</p>
 </div>
@@ -248,7 +248,7 @@
 <div class="card shadow-sm p-4 mb-4">
 <div class="row">
 <div class="col-md-4 text-center">
-<img src="imagedosen/pak opim.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
+<img src="image/pak opim.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
 <h5>Prof. Dr. Drs. Opim Salim Sitompul M.Sc</h5>
 <p class="text-muted">FASILKOMTI - Teknologi Informasi</p>
 </div>
@@ -267,7 +267,7 @@
 <div class="card shadow-sm p-4 mb-4">
 <div class="row">
 <div class="col-md-4 text-center">
-<img src="imagedosen/pak lubis.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
+<img src="image/pak lubis.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
 <h5>Fahrurrozi Lubis B.IT., M.Sc.IT</h5>
 <p class="text-muted">FASILKOMTI - Teknologi Informasi</p>
 </div>
@@ -286,7 +286,7 @@
 <div class="card shadow-sm p-4 mb-4">
 <div class="row">
 <div class="col-md-4 text-center">
-<img src="imagedosen/pak niman.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
+<img src="image/pak niman.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
 <h5>Seniman S.Kom., M.Kom. </h5>
 <p class="text-muted">FASILKOMTI - Teknologi Informasi</p>
 </div>
@@ -305,4 +305,5 @@
 </div>
 </body>
 </html>
+
 
