--- a/profil_dosen.html
+++ b/profil_dosen.html
@@ -302,8 +302,47 @@
 </div>
 </div>
 
+<div class="card shadow-sm p-4 mb-4">
+<div class="row">
+<div class="col-md-4 text-center">
+<img src="image/ibu aghni.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
+<h5>Aghni Syahmarani S.Si., M.Si.</h5>
+<p class="text-muted">FMIPA - Matematika</p>
+</div>
+
+<div class="col-md-8">
+<table class="table">
+<tr><th>NIP</th><td>198712092015042004</td></tr>
+<tr><th>NIDN</th><td>0009128703</td></tr>
+<tr><th>NUPTK</th><td>7541765666230233</td></tr>
+<tr><th>Email</th><td>aghni.syahmarani@usu.ac.id</td></tr>
+</table>
+</div>
+</div>
+</div>
+
+<div class="card shadow-sm p-4 mb-4">
+<div class="row">
+<div class="col-md-4 text-center">
+<img src="image/ibu maulida.png" class="profile-img mb-3" alt="Foto Dosen" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
+<h5>Maulida Yanti S.Si., M.Si.</h5>
+<p class="text-muted">FMIPA - Matematika</p>
+</div>
+
+<div class="col-md-8">
+<table class="table">
+<tr><th>NIP</th><td>199110242020122020</td></tr>
+<tr><th>NIDN</th><td>0024109003</td></tr>
+<tr><th>NUPTK</th><td>8356768669230303</td></tr>
+<tr><th>Email</th><td>maulidayanti@usu.ac.id</td></tr>
+</table>
+</div>
+</div>
+</div>
+
 </div>
 </body>
 </html>
+
 
 
