--- a/jadwal_dosen.html
+++ b/jadwal_dosen.html
@@ -80,7 +80,7 @@
             box-shadow: 0 10px 28px rgba(0,0,0,.08);
         }
         .day-header {
-            background: linear-gradient(135deg,#0d6efd,#4dabf7);
+            background: linear-gradient(135deg,#28a745,#A5D6A7);
             color: white;
             border-radius: 18px 18px 0 0;
         }
