--- a/jadwal_mahasiswa.html
+++ b/jadwal_mahasiswa.html
@@ -11,33 +11,43 @@
     <title>Satu TI - Jadwal Mahasiswa</title>
 
     <style>
+        body {
+            background-color: #ffffff; 
+            font-family: 'Arial', sans-serif;
+            color: #000000;
+        }
         .sidebar {
             width: 250px;
             height: 100vh;
             padding-top: 80px;
+            background-color: #28a745;
+            border-right: 1px solid #1e7e34;
             z-index: 1000; 
         }
-
         .main-content {
             margin-left: 250px;
             padding: 20px;
             padding-top: 100px;
+            background-color: #ffffff;
+            color: #000000;
         }
-
         .sidebar .nav-link {
             padding: 10px 20px;
-            color: #444; 
-        }
-        
+            color: #000000;
+            background-color: #ffffff;
+            transition: all 0.3s ease;
+        }      
         .sidebar .nav-link:hover {
-            background-color: #f0f0f0; 
+            background-color: #A5D6A7;
+            color: #ffffff; 
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2); 
         }
-
         .sidebar .nav-link.active {
-            background-color: #f0f0f0 !important; 
-            border-left: 3px solid #0d6efd !important; 
+            background-color: #155724 !important;
+            border-left: 3px solid #ffffff !important;
+            color: #ffffff;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.15);
         }
-
         .grid-image {
             width: 100%;
             height: 150px;
@@ -66,7 +76,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container-fluid container">
         <a class="navbar-brand" href="#">
-            <img src="image/satuti.png" alt="Satu TI Logo" width="100" height="60">
+            <img src="image/logo usu.jpg" alt="Logo USU" width="50" height="50">
+            <img src="image/satuti.png" alt="Satu TI Logo" width="100" height="50">
         </a>
         
         <form class="d-flex mx-auto" role="search" style="max-width: 500px;">
