--- a/jadwal_dosen.html
+++ b/jadwal_dosen.html
@@ -7,97 +7,160 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Satu TI - Portal</title>
     <style>
-        body {
-            background-color: #ffffff; 
-            font-family: 'Arial', sans-serif;
-            color: #000000;
+        :root{
+            --green-main:#28a745;
+            --green-dark:#1e7e34;
+            --green-soft:#eaf7ee;
+            --green-hover:#d4edda;
+            --white:#ffffff;
+            --gray-text:#555;
+            --shadow-soft:0 10px 28px rgba(0,0,0,.08);
+            --shadow-hover:0 14px 32px rgba(0,0,0,.15);
         }
-        .sidebar {
-            width: 250px;
-            height: 100vh;
-            padding-top: 80px;
-            background-color: #28a745;
-            border-right: 1px solid #1e7e34;
-            z-index: 1000;
+        body{
+            background:#fff;
+            font-family:'Segoe UI',Arial,sans-serif;
+            color:#222;
         }
-        .main-content {
-            margin-left: 250px;
-            padding: 20px;
-            padding-top: 100px;
-            background-color: #ffffff;
-            color: #000000;
+        .navbar{
+            transition:box-shadow .3s ease;
         }
-        .sidebar .nav-link {
-            padding: 10px 20px;
-            color: #000000;
-            background-color: #ffffff;
-            transition: all 0.3s ease; 
+        .navbar .nav-link{
+            color:var(--gray-text);
+            position:relative;
+            transition:color .3s ease;
         }
-        .sidebar .nav-link:hover {
-            background-color: #A5D6A7;
-            color: #ffffff; 
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2); 
+        .navbar .nav-link:hover{
+            color:var(--green-main);
         }
-        .sidebar .nav-link.active {
-            background-color: #155724 !important;
-            border-left: 3px solid #ffffff !important;
-            color: #ffffff;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+        .navbar .nav-link::after{
+            content:"";
+            position:absolute;
+            left:0;
+            bottom:-4px;
+            width:0;
+            height:2px;
+            background:var(--green-main);
+            transition:width .3s ease;
         }
-        .grid-image {
-            width: 100%;
-            height: 150px;
-            object-fit: cover;
-            border-radius: 8px;
-            margin-bottom: 15px;
+        .navbar .nav-link:hover::after{
+            width:100%;
         }
-        .card-img-top-custom {
-            height: 150px;
-            object-fit: cover;
+        .sidebar{
+            width:250px;
+            height:100vh;
+            padding-top:80px;
+            background:var(--white);
+            border-right:1px solid #e0e0e0;
+            z-index:1000;
         }
-        .text-truncate-3 {
-            display: -webkit-box;
-            -webkit-line-clamp: 3;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            margin-bottom: 10px;
+        .sidebar .nav-link{
+            margin:6px 12px;
+            padding:10px 18px;
+            border-radius:10px;
+            color:var(--gray-text);
+            transition:
+                background .25s ease,
+                transform .25s ease,
+                color .25s ease;
         }
-        .dropdown-menu {
-            transition: opacity 0.3s ease, transform 0.3s ease;
-            opacity: 0;
-            transform: translateY(-10px);
-            pointer-events: none;
+        .sidebar .nav-link:hover{
+            background:var(--green-soft);
+            color:var(--green-dark);
+            transform:translateX(6px);
         }
-        .dropdown-menu.show {
-            opacity: 1;
-            transform: translateY(0);
-            pointer-events: auto;
+        .sidebar .nav-link.active{
+            background:var(--green-main)!important;
+            color:#fff!important;
+            font-weight:600;
+            border-left:4px solid var(--green-dark);
         }
-        .day-card {
-            border: none;
-            border-radius: 18px;
-            box-shadow: 0 10px 28px rgba(0,0,0,.08);
+        .dropdown-menu{
+            border:none;
+            border-radius:12px;
+            box-shadow:var(--shadow-soft);
+            opacity:0;
+            visibility:hidden;
+            transform:translateY(10px);
+            transition:
+                opacity .25s ease,
+                transform .25s ease,
+                visibility .25s;
         }
-        .day-header {
-            background: linear-gradient(135deg,#28a745,#A5D6A7);
-            color: white;
-            border-radius: 18px 18px 0 0;
+        .dropdown-menu.show{
+            opacity:1;
+            visibility:visible;
+            transform:translateY(0);
         }
-        .class-item {
-            border-radius: 14px;
-            background: #f8f9fa;
-            padding: 15px 18px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+        .main-content{
+            margin-left:250px;
+            padding:20px;
+            padding-top:100px;
+        }
+        .form-select{
+            border-radius:14px;
+            border:1px solid #ced4da;
+            transition:border .3s ease, box-shadow .3s ease;
+        }
+        .form-select:focus{
+            border-color:var(--green-main);
+            box-shadow:0 0 0 .15rem rgba(40,167,69,.25);
+        }
+        .day-card{
+            border:none;
+            border-radius:18px;
+            box-shadow:var(--shadow-soft);
+            animation:fadeUp .5s ease forwards;
+        }
+        .day-header{
+            background:linear-gradient(135deg,var(--green-main),#7ed957);
+            color:#fff;
+            border-radius:18px 18px 0 0;
+        }
+        .class-item{
+            background:#f9fdfb;
+            border-radius:14px;
+            padding:15px 18px;
+            display:flex;
+            justify-content:space-between;
+            align-items:center;
+            transition:transform .25s ease, box-shadow .25s ease;
         }
         .class-item:not(:last-child){
-            margin-bottom: 14px;
+            margin-bottom:14px;
         }
-        .badge-time {
-            background: #198754;
-            font-size: .85rem;
+        .class-item:hover{
+            transform:translateY(-4px);
+            box-shadow:var(--shadow-hover);
+        }
+        .badge-time{
+            background:var(--green-main);
+            font-size:.85rem;
+        }
+        .grid-image, .card-img-top-custom{
+            transition:transform .35s ease;
+        }
+        .grid-image:hover, .card-img-top-custom:hover{
+            transform:scale(1.05);
+        }
+        .btn-outline-success{
+            transition:
+                background .3s ease,
+                color .3s ease,
+                transform .2s ease;
+        }
+        .btn-outline-success:hover{
+            transform:translateY(-2px);
+        }
+        @keyframes fadeUp{
+            from{
+                opacity:0;
+                transform:translateY(20px);
+            }
+            to{
+                opacity:1;
+                transform:translateY(0);
+            }
         }
     </style>
 </head>
@@ -106,7 +169,7 @@
     <div class="container-fluid container">
         <a class="navbar-brand" href="#">
             <img src="image/logo usu.jpg" alt="Logo USU" width="50" height="50">
-            <img src="image/satuti.png" alt="Satu TI Logo" width="100" height="50">
+            <img src="image/satuti.png" alt="Satu TI Logo" width="100" height="40">
         </a>
             <form class="d-flex mx-auto" role="search" style="max-width: 500px;">
                 <input class="form-control me-2" type="search" placeholder="Cari..." aria-label="Search">
