--- a/informasi.html
+++ b/informasi.html
@@ -31,24 +31,32 @@
 
         .navbar .nav-link {
             position: relative;
-            color: var(--gray-text);
-            transition: color 0.3s ease;
         }
         .navbar .nav-link:hover {
             color: var(--green-main);
         }
         .navbar .nav-link::after {
-            content: "";
-            position: absolute;
-            bottom: -4px;
-            left: 0;
-            width: 0;
-            height: 2px;
-            background-color: var(--green-main);
+            content:"";
+            position:absolute;
+            left:0;
+            bottom:-4px;
+            width:0;
+            height:3px;
+            background: linear-gradient(
+                90deg,
+                #28a745,
+                #6fdc8c,
+                #28a745
+         );
+            border-radius: 2px;
             transition: width 0.3s ease;
+            box-shadow: 0 0 8px rgba(40,167,69,.5);
         }
-        .navbar .nav-link:hover::after {
+        .navbar .nav-link:hover::before, .navbar .nav-link.dropdown-toogle.show::before {
             width: 100%;
+        }
+        .navbar .dropdown-toggle::after{
+            display: none !important;
         }
         .sidebar {
             width: 250px;
