--- a/jadwal_mahasiswa.html
+++ b/jadwal_mahasiswa.html
@@ -11,63 +11,170 @@
     <title>Satu TI - Jadwal Mahasiswa</title>
 
     <style>
-        body {
-            background-color: #ffffff; 
-            font-family: 'Arial', sans-serif;
-            color: #000000;
+        :root{
+            --green-main:#28a745;
+            --green-dark:#1e7e34;
+            --green-soft:#eaf7ee;
+            --green-hover:#d4edda;
+            --white:#ffffff;
+            --gray-text:#555;
+            --shadow-soft:0 10px 28px rgba(0,0,0,.08);
+            --shadow-hover:0 14px 32px rgba(0,0,0,.15);
         }
-        .sidebar {
-            width: 250px;
-            height: 100vh;
-            padding-top: 80px;
-            background-color: #28a745;
-            border-right: 1px solid #1e7e34;
-            z-index: 1000; 
+        body{
+            background:#fff;
+            font-family:'Segoe UI',Arial,sans-serif;
+            color:#222;
         }
-        .main-content {
-            margin-left: 250px;
-            padding: 20px;
-            padding-top: 100px;
-            background-color: #ffffff;
-            color: #000000;
-        }
-        .sidebar .nav-link {
-            padding: 10px 20px;
-            color: #000000;
-            background-color: #ffffff;
-            transition: all 0.3s ease;
-        }      
-        .sidebar .nav-link:hover {
-            background-color: #A5D6A7;
-            color: #ffffff; 
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2); 
-        }
-        .sidebar .nav-link.active {
-            background-color: #155724 !important;
-            border-left: 3px solid #ffffff !important;
-            color: #ffffff;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-        }
-        .grid-image {
-            width: 100%;
-            height: 150px;
-            object-fit: cover;
-            border-radius: 8px;
-            margin-bottom: 15px;
+        .navbar {
+            background-color: var(--white);
+            transition: box-shadow 0.3s ease, background-color 0.3s ease;
         }
 
-        .card-img-top-custom {
-            height: 150px;
-            object-fit: cover;
+        .navbar .nav-link {
+            position: relative;
         }
-        
-        .text-truncate-3 {
-            display: -webkit-box;
-            -webkit-line-clamp: 3;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            margin-bottom: 10px; 
+        .navbar .nav-link:hover {
+            color: var(--green-main);
+        }
+        .navbar .nav-link::after {
+            content:"";
+            position:absolute;
+            left:0;
+            bottom:-4px;
+            width:0;
+            height:3px;
+            background: linear-gradient(
+                90deg,
+                #28a745,
+                #6fdc8c,
+                #28a745
+         );
+            border-radius: 2px;
+            transition: width 0.3s ease;
+            box-shadow: 0 0 8px rgba(40,167,69,.5);
+        }
+        .navbar .nav-link:hover::before, .navbar .nav-link.dropdown-toogle.show::before {
+            width: 100%;
+        }
+        .navbar .dropdown-toggle::after{
+            display: none !important;
+        }
+        .sidebar{
+            width:250px;
+            height:100vh;
+            padding-top:80px;
+            background:var(--white);
+            border-right:1px solid #e0e0e0;
+            z-index:1000;
+        }
+        .sidebar .nav-link{
+            margin:6px 12px;
+            padding:10px 18px;
+            border-radius:10px;
+            color:var(--gray-text);
+            transition:
+                background .25s ease,
+                transform .25s ease,
+                color .25s ease;
+        }
+        .sidebar .nav-link:hover{
+            background:var(--green-soft);
+            color:var(--green-dark);
+            transform:translateX(6px);
+        }
+        .sidebar .nav-link.active{
+            background:var(--green-main)!important;
+            color:#fff!important;
+            font-weight:600;
+            border-left:4px solid var(--green-dark);
+        }
+        .dropdown-menu{
+            border:none;
+            border-radius:12px;
+            box-shadow:var(--shadow-soft);
+            opacity:0;
+            visibility:hidden;
+            transform:translateY(10px);
+            transition:
+                opacity .25s ease,
+                transform .25s ease,
+                visibility .25s;
+        }
+        .dropdown-menu.show{
+            opacity:1;
+            visibility:visible;
+            transform:translateY(0);
+        }
+        .main-content{
+            margin-left:250px;
+            padding:20px;
+            padding-top:100px;
+        }
+        .form-select{
+            border-radius:14px;
+            border:1px solid #ced4da;
+            transition:border .3s ease, box-shadow .3s ease;
+        }
+        .form-select:focus{
+            border-color:var(--green-main);
+            box-shadow:0 0 0 .15rem rgba(40,167,69,.25);
+        }
+        .day-card{
+            border:none;
+            border-radius:18px;
+            box-shadow:var(--shadow-soft);
+            animation:fadeUp .5s ease forwards;
+        }
+        .day-header{
+            background:linear-gradient(135deg,var(--green-main),#7ed957);
+            color:#fff;
+            border-radius:18px 18px 0 0;
+        }
+        .class-item{
+            background:#f9fdfb;
+            border-radius:14px;
+            padding:15px 18px;
+            display:flex;
+            justify-content:space-between;
+            align-items:center;
+            transition:transform .25s ease, box-shadow .25s ease;
+        }
+        .class-item:not(:last-child){
+            margin-bottom:14px;
+        }
+        .class-item:hover{
+            transform:translateY(-4px);
+            box-shadow:var(--shadow-hover);
+        }
+        .badge-time{
+            background:var(--green-main);
+            font-size:.85rem;
+        }
+        .grid-image, .card-img-top-custom{
+            transition:transform .35s ease;
+        }
+        .grid-image:hover, .card-img-top-custom:hover{
+            transform:scale(1.05);
+        }
+        .btn-outline-success{
+            transition:
+                background .3s ease,
+                color .3s ease,
+                transform .2s ease;
+        }
+        .btn-outline-success:hover{
+            transform:translateY(-2px);
+        }
+        @keyframes fadeUp{
+            from{
+                opacity:0;
+                transform:translateY(20px);
+            }
+            to{
+                opacity:1;
+                transform:translateY(0);
+            }
         }
     </style>
 </head>
