--- a/jadwal_dosen.html
+++ b/jadwal_dosen.html
@@ -85,6 +85,38 @@
             font-weight:600;
             border-left:4px solid var(--green-dark);
         }
+        .user-dropdown .dropdown-toggle::after {
+            display: none;
+        }
+
+        .user-avatar {
+            width: 38px;
+            height: 38px;
+            background-color: var(--green-main);
+            color: #fff;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 18px;
+        }
+        .user-menu {
+            min-width: 200px;
+            padding: 10px 0;
+            border-radius: 14px;
+            border: none;
+            box-shadow: 0 12px 30px rgba(0,0,0,.15);
+        }
+        .user-menu .dropdown-item {
+            padding: 10px 18px;
+            border-radius: 8px;
+            margin: 2px 8px;
+            transition: background-color .2s ease, transform .2s ease;
+        }
+        .user-menu .dropdown-item:hover {
+            background-color: var(--green-soft);
+        transform: translateX(4px);
+        }
         .dropdown-menu{
             border:none;
             border-radius:12px;
