--- a/editakun.html
+++ b/editakun.html
@@ -11,125 +11,221 @@
     <title>Satu TI - Edit Akun</title>
 
     <style>
+        :root {
+            --green-main: #28a745;
+            --green-dark: #1e7e34;
+            --green-soft: #eaf7ee;
+            --green-hover: #d4edda;
+            --white: #ffffff;
+            --gray-text: #555;
+        }
         body {
-            background-color: #ffffff; 
+            background-color: var(--white);
+            color: var(--gray-text);
             font-family: 'Arial', sans-serif;
-            color: #000000;
+        }
+        .navbar {
+            background-color: var(--white);
+            transition: box-shadow 0.3s ease, background-color 0.3s ease;
+        }
+
+        .navbar .nav-link {
+            position: relative;
+        }
+        .navbar .nav-link:hover {
+            color: var(--green-main);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .navbar .nav-link::after {
+            content:"";
+            position:absolute;
+            left:0;
+            bottom:-4px;
+            width:0;
+            height:3px;
+            background: linear-gradient(
+                90deg,
+                #28a745,
+                #6fdc8c,
+                #28a745
+         );
+            border-radius: 2px;
+            transition: width 0.3s ease;
+            box-shadow: 0 0 8px rgba(40,167,69,.5);
+        }
+        .navbar .nav-link:hover::before, .navbar .nav-link.dropdown-toogle.show::before {
+            width: 100%;
+        }
+        .navbar .dropdown-toggle::after{
+            display: none !important;
         }
         .sidebar {
             width: 250px;
             height: 100vh;
             padding-top: 80px;
-            background-color: #28a745;
-            border-right: 1px solid #1e7e34;
+            background-color: var(--white);
+            border-right: 1px solid #ddd;
             z-index: 1000;
+        }
+        .sidebar .nav-link {
+            padding: 10px 20px;
+            margin: 4px 10px;
+            border-radius: 8px;
+            color: var(--gray-text);
+            transform: translateX(0);
+            transition:
+                background-color 0.25s ease,
+                transform 0.25s ease,
+                color 0.25s ease,
+                box-shadow 0.25s ease;
+        }
+        .sidebar .nav-link:hover {
+            background-color: var(--green-soft);
+            color: var(--green-dark);
+            transform: translateX(6px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        }
+        .sidebar .nav-link.active {
+            background-color: var(--green-main) !important;
+            color: #fff !important;
+            font-weight: 600;
+            border-left: 4px solid var(--green-dark) !important;
         }
         .main-content {
             margin-left: 250px;
             padding: 20px;
             padding-top: 100px;
-            background-color: #ffffff;
-            color: #000000;
-        }
-        .sidebar .nav-link {
-            padding: 10px 20px;
-            color: #000000;
-            background-color: #ffffff;
-            transition: all 0.3s ease; 
-        }
-        .sidebar .nav-link:hover {
-            background-color: #A5D6A7;
-            color: #ffffff; 
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2); 
-        }
-        .sidebar .nav-link.active {
-            background-color: #155724 !important;
-            border-left: 3px solid #ffffff !important;
-            color: #ffffff;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-        }
-        .navbar {
-            background-color: #ffffff !important; 
-            border-bottom: 1px solid #1e7e34;
-            color: #ffffff; 
-        }
-        .navbar-brand img {
-            filter: brightness(1.1);
-        }
-        .navbar .nav-link {
-            color: #ffffff !important;
         }
         .dropdown-menu {
-            transition: opacity 0.3s ease, transform 0.3s ease;
             opacity: 0;
-            transform: translateY(-10px); 
-            pointer-events: none;
+            visibility: hidden;
+            transform: translateY(10px);
+            border-radius: 10px;
+            border: none;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.12);
+            transition:
+                opacity 0.25s ease,
+                transform 0.25s ease,
+                visibility 0.25s;
+            z-index: 2000;
         }
         .dropdown-menu.show {
             opacity: 1;
+            visibility: visible;
             transform: translateY(0);
-            pointer-events: auto; 
         }
         .dropdown-item {
-            color: #ffffff; 
+            transition: background-color .2s ease, padding-left .2s ease;
         }
         .dropdown-item:hover {
-            background-color: #218838;
-            color: #ffffff;
+            background-color: var(--green-soft);
+            padding-left: 1.25rem;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
         }
-        .register-container {
-            background-color: #ffffff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(40, 167, 69, 0.1); 
-            max-width: 500px;
-            margin: 0 auto;
-            border: 1px solid #e0f7e0;
-            color: #000000; 
-        }
-        .register-container h2 {
-            color: #289f44;
-            text-align: center;
-        }
-        .btn-success-custom {
-            width: 100%;
-            padding: 10px;
-            background: linear-gradient(135deg, #28a745, #189431);
-            color: #ffffff;
+        .card {
             border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: all 0.3s ease; 
-            box-shadow: 0 2px 4px rgba(40, 167, 69, 0.2); 
+            border-radius: 14px;
+            transition:
+                transform 0.3s ease,
+                box-shadow 0.3s ease;
         }
-        .btn-success-custom:hover {
-            background: linear-gradient(135deg, #218838, #17a2b8); 
+        .card:hover {
+            transform: translateY(-6px);
+            box-shadow: 0 12px 28px rgba(0,0,0,0.15);
+        }
+        .user-dropdown .dropdown-toggle::after {
+            display: none;
+        }
+        .user-avatar {
+            width: 38px;
+            height: 38px;
+            background-color: var(--green-main);
+            color: #fff;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 18px;
+        }
+        .user-menu {
+            min-width: 200px;
+            padding: 10px 0;
+            border-radius: 14px;
+            border: none;
+            box-shadow: 0 12px 30px rgba(0,0,0,.15);
+        }
+        .user-menu .dropdown-item {
+            padding: 10px 18px;
+            border-radius: 8px;
+            margin: 2px 8px;
+            transition: background-color .2s ease, transform .2s ease, box-shadow .2s ease;
+        }
+        .user-menu .dropdown-item:hover {
+            background-color: var(--green-soft);
+            transform: translateX(4px);
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+        }
+        .grid-image {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 8px;
+            margin-bottom: 15px;
+            transition: transform 0.35s ease;
+        }
+        .card-img-top-custom {
+            height: 150px;
+            object-fit: cover;
+            transition: transform 0.35s ease;
+        }
+        .grid-image:hover,
+        .card-img-top-custom:hover {
+            transform: scale(1.05);
+        }
+        .text-truncate-3 {
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            margin-bottom: 10px;
+        }
+        .btn-outline-success,
+        .btn-outline-primary {
+            transition:
+                background-color 0.3s ease,
+                color 0.3s ease,
+                transform 0.2s ease;
+        }
+        .btn-outline-success:hover,
+        .btn-outline-primary:hover {
             transform: translateY(-2px);
-            box-shadow: 0 4px 8px rgba(40, 167, 69, 0.3);
-        }
-        .form-label {
-            font-weight: bold;
-            color: #000000;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         .form-control {
-            border: 1px solid #ced4da;
-            border-radius: 5px;
-            transition: border-color 0.3s ease;
-            color: #000000;
+            transition: box-shadow 0.3s ease;
         }
-        .form-control:focus {
-            border-color: #28a745;
-            box-shadow: 0 0 5px rgba(40, 167, 69, 0.3);
+        .form-control:hover {
+            box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
         }
-        @media (max-width: 768px) {
-            .sidebar {
-                width: 100%;
-                height: auto;
-                position: relative;
+        .register-container {
+            transition: box-shadow 0.3s ease;
+        }
+        .register-container:hover {
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+        }
+        @keyframes fadeUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
             }
-            .main-content {
-                margin-left: 0;
+            to {
+                opacity: 1;
+                transform: translateY(0);
             }
+        }   
+        .main-content > * {
+            animation: fadeUp 0.6s ease forwards;
         }
     </style>
 </head>
@@ -139,7 +235,7 @@
     <div class="container-fluid container">
         <a class="navbar-brand" href="#">
             <img src="image/logo usu.jpg" alt="Logo USU" width="50" height="50">
-            <img src="image/satuti.png" alt="Satu TI Logo" width="100" height="50">
+            <img src="image/satuti.png" alt="Satu TI Logo" width="100" height="40">
         </a>
         
         <form class="d-flex mx-auto" role="search" style="max-width: 500px;">
