--- a/kelas.html
+++ b/kelas.html
@@ -214,10 +214,10 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
-    <div class="container-fluid container">
-        <a class="navbar-brand" href="#">
-            <img src="image/logo usu.jpg" alt="Logo USU" width="50" height="50">
-            <img src="image/satuti.png" alt="Satu TI Logo" width="100" height="40">
+    <div class="container-fluid px-4">
+        <a class="navbar-brand d-flex align-items-center" href="#">
+            <img src="image/logo usu.jpg" alt="Logo USU" width="40" height="40" class="me-2">
+            <img src="image/satuti.png" alt="Satu TI Logo" width="90" height="35">
         </a>
         
         <form class="d-flex mx-auto" role="search" style="max-width: 500px;">
