--- a/kelas.html
+++ b/kelas.html
@@ -352,6 +352,47 @@ document.querySelectorAll('.btn-lihat').forEach(btn => {
     });
 });
 </script>
+<footer class="portal-footer mt-5">
+    <div class="container-fluid px-4">
+        <div class="row gy-4">
+            <div class="col-md-4">
+                <h6 class="footer-title">Program Studi</h6>
+                <p class="small mb-1">S1 Teknologi Informasi</p>
+                <p class="small mb-1">Fakultas Ilmu Komputer dan Teknologi Informasi</p>
+                <p class="small">Universitas Sumatera Utara</p>
+            </div>
 
+            <div class="col-md-4">
+                <h6 class="footer-title">Kontak</h6>
+                <p class="small mb-1">
+                    <i class="fa-solid fa-envelope me-2"></i> ti@usu.ac.id
+                </p>
+                <p class="small mb-1">
+                    <i class="fa-solid fa-phone me-2"></i> (061) 821-xxxx
+                </p>
+                <p class="small">
+                    <i class="fa-solid fa-location-dot me-2"></i> Medan, Sumatera Utara
+                </p>
+            </div>
+
+            <div class="col-md-4">
+                <h6 class="footer-title">Tautan</h6>
+                <ul class="list-unstyled small">
+                    <li><a href="#" class="footer-link">Beranda</a></li>
+                    <li><a href="#" class="footer-link">Dosen</a></li>
+                    <li><a href="#" class="footer-link">Jadwal</a></li>
+                    <li><a href="#" class="footer-link">Kelas</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+        <hr class="my-3">
+
+        <div class="text-center small">
+            © 2025 Program Studi Teknologi Informasi — Universitas Sumatera Utara
+        </div>
+    </div>
+</footer>
 </body>
 </html>
