--- a/editakun.html
+++ b/editakun.html
@@ -214,6 +214,32 @@
         .register-container:hover {
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
         }
+        .portal-footer {
+            margin-left: 250px;
+            background-color: #f8f9fa;
+            border-top: 1px solid #ddd;
+            padding: 30px 0 15px;
+            color: var(--gray-text);
+        }
+        .footer-title {
+            font-weight: 600;
+            margin-bottom: 10px;
+            color: var(--green-dark);
+        }
+        .footer-link {
+            color: var(--gray-text);
+            text-decoration: none;
+            transition: color 0.2s ease, padding-left 0.2s ease;
+        }
+        .footer-link:hover {
+            color: var(--green-main);
+            padding-left: 6px;
+        }
+        @media (max-width: 992px) {
+            .portal-footer {
+                margin-left: 0;
+            }
+        }
         @keyframes fadeUp {
             from {
                 opacity: 0;
@@ -338,5 +364,47 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<footer class="portal-footer mt-5">
+    <div class="container-fluid px-4">
+        <div class="row gy-4">
+            <div class="col-md-4">
+                <h6 class="footer-title">Program Studi</h6>
+                <p class="small mb-1">S1 Teknologi Informasi</p>
+                <p class="small mb-1">Fakultas Ilmu Komputer dan Teknologi Informasi</p>
+                <p class="small">Universitas Sumatera Utara</p>
+            </div>
+
+            <div class="col-md-4">
+                <h6 class="footer-title">Kontak</h6>
+                <p class="small mb-1">
+                    <i class="fa-solid fa-envelope me-2"></i> ti@usu.ac.id
+                </p>
+                <p class="small mb-1">
+                    <i class="fa-solid fa-phone me-2"></i> (061) 821-xxxx
+                </p>
+                <p class="small">
+                    <i class="fa-solid fa-location-dot me-2"></i> Medan, Sumatera Utara
+                </p>
+            </div>
+
+            <div class="col-md-4">
+                <h6 class="footer-title">Tautan</h6>
+                <ul class="list-unstyled small">
+                    <li><a href="#" class="footer-link">Beranda</a></li>
+                    <li><a href="#" class="footer-link">Dosen</a></li>
+                    <li><a href="#" class="footer-link">Jadwal</a></li>
+                    <li><a href="#" class="footer-link">Kelas</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+        <hr class="my-3">
+
+        <div class="text-center small">
+            © 2025 Program Studi Teknologi Informasi — Universitas Sumatera Utara
+        </div>
+    </div>
+</footer>
 </body>
 </html>
