--- a/editakun.html
+++ b/editakun.html
@@ -93,8 +93,10 @@
         }
         .main-content {
             margin-left: 250px;
-            padding: 20px;
-            padding-top: 100px;
+            padding: 40px 30px;
+            padding-top: 110px;
+            display: flex;
+            justify-content: center;
         }
         .dropdown-menu {
             opacity: 0;
@@ -121,6 +123,23 @@
             background-color: var(--green-soft);
             padding-left: 1.25rem;
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+        }
+        .btn-success-custom {
+            background: var(--green-main);
+            border: none;
+            color: #fff;
+            padding: 12px 28px;
+            border-radius: 12px;
+            font-weight: 600;
+            transition: 
+                background .3s ease,
+                transform .2s ease,
+                box-shadow .2s ease;
+        }
+        .btn-success-custom:hover {
+            background: var(--green-dark);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 14px rgba(0,0,0,.15);
         }
         .card {
             border: none;
@@ -209,7 +228,12 @@
             box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
         }
         .register-container {
-            transition: box-shadow 0.3s ease;
+            background: #ffffff;
+            padding: 30px 35px;
+            border-radius: 16px;
+            box-shadow: 0 10px 28px rgba(0,0,0,.08);
+            max-width: 1000px;
+            align-items: center;
         }
         .register-container:hover {
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
